Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -27,3 +27,8 @@
   
   - npm run build
   - npm run deploy
+</br>
+
+### 3) Fiori 프로젝트를 ABAP 서버에 배포하기 위한 초기 배포 설정 과정
+
+<img width="418" height="200" alt="image" src="https://github.com/user-attachments/assets/a13f03c7-552d-4c9f-b3bc-d18f014f08e1" />
