Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -32,3 +32,14 @@
 ### 3) Fiori 프로젝트를 ABAP 서버에 배포하기 위한 초기 배포 설정 과정
 
 <img width="418" height="200" alt="image" src="https://github.com/user-attachments/assets/a13f03c7-552d-4c9f-b3bc-d18f014f08e1" />
+</br>
+</br>
+
+### 4) FIORI ABAP REPOSITORY 배포 및 CTS TRANSPORT 연계 설정
+- FIORI 배포 결과물이 dist 폴더로 생성됨
+- 배포 설정 정보는 `ui5-deploy.yaml` 파일에 저장됨
+- APP NAME은 ABAP 저장소 규칙에 따라 대문자로 설정됨 (`ZUIPROG_B03_01`)
+- ABAP REPOSITORY에 등록되어 CTS TRANSPORT와 연계됨
+- CTS TRANSPORT를 통해 다른 시스템으로 이관 가능한 프로그램임
+
+<img width="513" height="220" alt="image" src="https://github.com/user-attachments/assets/c9d7370b-e0e1-4edc-896a-cfe18a46c21d" />
