Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -42,4 +42,10 @@
 - ABAP REPOSITORY에 등록되어 CTS TRANSPORT와 연계됨
 - CTS TRANSPORT를 통해 다른 시스템으로 이관 가능한 프로그램임
 
-<img width="513" height="220" alt="image" src="https://github.com/user-attachments/assets/c9d7370b-e0e1-4edc-896a-cfe18a46c21d" />
+<img width="476" height="204" alt="image" src="https://github.com/user-attachments/assets/7b620fec-7067-43a4-871f-d16125edbaad" />
+</br>
+</br>
+
+### 5) npm run deploy 실행으로 FIORI 애플리케이션이 ABAP 저장소에 정상 배포됨
+
+<img width="479" height="250" alt="image" src="https://github.com/user-attachments/assets/d3adcf98-380d-4e6a-bbc2-2e3460aaef36" />
