--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -49,3 +49,7 @@
 ### 5) npm run deploy 실행으로 FIORI 애플리케이션이 ABAP 저장소에 정상 배포됨
 
 <img width="479" height="250" alt="image" src="https://github.com/user-attachments/assets/d3adcf98-380d-4e6a-bbc2-2e3460aaef36" />
+</br>
+
+- SE80에서 ZUIPROG_B03_01 BSP APPLICATION이 생성되어 ABAP 저장소에 등록된 상태임
+<img width="323" height="274" alt="image" src="https://github.com/user-attachments/assets/c3d362c2-6bae-4ffb-a901-42dcd8e21fd2" />
