Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -53,3 +53,9 @@
 
 - SE80에서 ZUIPROG_B03_01 BSP APPLICATION이 생성되어 ABAP 저장소에 등록된 상태임
 <img width="323" height="274" alt="image" src="https://github.com/user-attachments/assets/c3d362c2-6bae-4ffb-a901-42dcd8e21fd2" />
+</br>
+</br>
+
+### 6) BAS에서 코드 변경 후에 `npm run build` -> `npm run deploy` 하고 SAP GUI 확인 시 변경된 것을 확인 가능
+
+<img width="748" height="250" alt="image" src="https://github.com/user-attachments/assets/b4b80bce-064c-4c64-9617-6630aab46d41" />
