Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -1150,7 +1150,21 @@ sap.ui.define([
             let oModel = new JSONModel(oData); 
             let oDialog = sap.ui.getCore().byId("idCreateDialog");    
 
-            if(oDialog) {      
+            if(oDialog) {   
+                let oData = {
+                    Carrid : "",
+                    Carrname : "",
+                    Currcode : "",
+                    ItemSet: [ {
+                        Carrid : "",
+                        Connid : "",
+                        Cityfrom : "",
+                        Airpfrom : "",
+                        Cityto : "",
+                        Airpto : ""
+                    } ]
+                };
+                this._oDialog.getModel("oCreateModel").setData(oData);   
                 this._oDialog.open();
             }
             else {
