--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -60,4 +60,21 @@
 ### 6) BAS에서 코드 변경 후에 `npm run build` -> `npm run deploy` 하고 SAP GUI 확인 시 변경된 것을 확인 가능
 
 <img width="649" height="217" alt="image" src="https://github.com/user-attachments/assets/8105de01-554a-40e4-be98-54bf53acd451" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
 
+---
+
+</br>
+
+## < SAP UI5 테마 커스터마이징 >
+</br>
+
+### 1) ABAP 시스템으로 배포하면서 CTS TRANSPORT를 지정
+- 기존 CTS를 선택하면 기존 이관 요청에 포함되고, 새로 생성하면 새로운 TRANSPORT REQUEST로 생성되어 관리됨
+
+<img width="352" height="160" alt="image" src="https://github.com/user-attachments/assets/2a194397-1c0e-4b6a-8fb7-b49c91c7afc5" />
