Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -78,3 +78,5 @@
 - 기존 CTS를 선택하면 기존 이관 요청에 포함되고, 새로 생성하면 새로운 TRANSPORT REQUEST로 생성되어 관리됨
 
 <img width="352" height="160" alt="image" src="https://github.com/user-attachments/assets/2a194397-1c0e-4b6a-8fb7-b49c91c7afc5" />
+
+<img width="439" height="116" alt="image" src="https://github.com/user-attachments/assets/9e257597-bb7d-46d6-8bb4-91f33868611e" />
