Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -80,3 +80,25 @@
 <img width="352" height="160" alt="image" src="https://github.com/user-attachments/assets/2a194397-1c0e-4b6a-8fb7-b49c91c7afc5" />
 
 <img width="439" height="116" alt="image" src="https://github.com/user-attachments/assets/9e257597-bb7d-46d6-8bb4-91f33868611e" />
+</br>
+</br>
+
+### 2) `npm run build` -> `npm run deploy-config` -> `npm run deploy` 후에 ABAP 패키지(ZPACB03_01)에 정상 등록된 것을 확인 가능
+
+<img width="580" height="251" alt="image" src="https://github.com/user-attachments/assets/2f3de493-e25d-4b9a-bbba-0501fd47f0e7" />
+</br>
+</br>
+
+### 3) `/n/ui2/flp` 명령어로 FIORI LAUNCHPAD에 접속
+
+<img width="697" height="253" alt="image" src="https://github.com/user-attachments/assets/4497ba3e-0f84-4476-9253-5d2f31f5f39b" />
+</br>
+</br>
+
+### 4) /n/ui5/theme_designer 명령어로 FIORI 테마를 커스터마이징(로고·색상·배경 등 변경) 가능
+- 테마 변경 후 ‘저장’은 임시저장, ‘저장 및 작성’은 최종 활성화, ‘닫기’는 편집 종료 후 다음 단계로 이동
+
+<img width="718" height="319" alt="image" src="https://github.com/user-attachments/assets/01d1c3b3-9728-41ce-949a-f54c9803a1d5" />
+
+<img width="718" height="321" alt="image" src="https://github.com/user-attachments/assets/dab8c803-0be0-4716-a091-4012c4568b2c" />
+
