Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -102,3 +102,6 @@
 
 <img width="718" height="321" alt="image" src="https://github.com/user-attachments/assets/dab8c803-0be0-4716-a091-4012c4568b2c" />
 
+- 기존 SAP_HORIZON 테마를 기준으로 새로운 커스텀 테마(NCODEB03, NCODEB03 Theme)를 생성하여 저장
+
+<img width="434" height="191" alt="image" src="https://github.com/user-attachments/assets/d5446ef4-112c-45d0-895b-991b715c11e2" />
