Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -111,3 +111,10 @@
 - 기존 SAP_HORIZON 테마를 기준으로 새로운 커스텀 테마(NCODEB03, NCODEB03 Theme)를 생성하여 저장
 
 <img width="434" height="191" alt="image" src="https://github.com/user-attachments/assets/d5446ef4-112c-45d0-895b-991b715c11e2" />
+</br>
+</br>
+</br>
+
+### 5) 생성한 커스텀 테마(NCODEB03)를 선택하여 편집·저장·삭제·이름변경 등 가능
+
+<img width="839" height="353" alt="image" src="https://github.com/user-attachments/assets/aa58dce8-f895-4a00-b1a4-a017ae5d05f7" />
