Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -118,3 +118,7 @@
 ### 5) 생성한 커스텀 테마(NCODEB03)를 선택하여 편집·저장·삭제·이름변경 등 가능
 
 <img width="839" height="353" alt="image" src="https://github.com/user-attachments/assets/aa58dce8-f895-4a00-b1a4-a017ae5d05f7" />
+
+<img width="696" height="311" alt="image" src="https://github.com/user-attachments/assets/935855c7-7f3f-4fb7-9a0a-073dad840c17" />
+
+<img width="732" height="328" alt="image" src="https://github.com/user-attachments/assets/7ef4fef9-52ae-48f0-b6ad-6b949064ef4e" />
