Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -122,3 +122,15 @@
 <img width="696" height="311" alt="image" src="https://github.com/user-attachments/assets/935855c7-7f3f-4fb7-9a0a-073dad840c17" />
 
 <img width="732" height="328" alt="image" src="https://github.com/user-attachments/assets/7ef4fef9-52ae-48f0-b6ad-6b949064ef4e" />
+</br>
+</br>
+</br>
+
+### 6) Fiori Launchpad 설정(Settings)에서 생성한 커스텀 테마(NCODEB03)를 선택·저장하여 사용자 화면에 적용
+
+<img width="804" height="371" alt="image" src="https://github.com/user-attachments/assets/f1d7afc6-fbd7-4f15-86b5-c854fbde04fe" />
+
+<img width="805" height="380" alt="image" src="https://github.com/user-attachments/assets/d63fa4de-bf3e-4d7e-8be2-ff13cd8e17bb" />
+
+<img width="718" height="325" alt="image" src="https://github.com/user-attachments/assets/0a239337-60ab-47fd-873f-9c936174ca39" />
+
