Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -133,4 +133,16 @@
 <img width="805" height="380" alt="image" src="https://github.com/user-attachments/assets/d63fa4de-bf3e-4d7e-8be2-ff13cd8e17bb" />
 
 <img width="718" height="325" alt="image" src="https://github.com/user-attachments/assets/0a239337-60ab-47fd-873f-9c936174ca39" />
+</br>
+</br>
+</br>
+</br>
+</br>
 
+---
+
+</br>
+
+**1) Fiori Launchpad에서 카탈로그에 새로운 타일(앱)을 추가**
+
+<img width="755" height="363" alt="image" src="https://github.com/user-attachments/assets/2823087a-e3c3-4a45-bda7-3cf512f9d039" />
