Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="210" height="228" alt="image" src="https://github.com/user-attachments/assets/5b465b46-a042-468c-93c7-1d6ad91d96ad" />## <  핵심 개념 >
 - **1) Header–Item 구조 OData 서비스 구현**
 - **2) DatePicker / DateRangeSelection 정리**
 </br>
@@ -143,6 +143,9 @@
 
 </br>
 
-**1) Fiori Launchpad에서 카탈로그에 새로운 타일(앱)을 추가**
+**1) Fiori Launchpad에서 새로운 Catalog를 생성**
+- 클라이언트 100번인지 확인
+  
+<img width="755" height="363" alt="image" src="https://github.com/user-attachments/assets/7de45df5-4bb9-4b74-bb42-87d75d7cb472" />
 
-<img width="755" height="363" alt="image" src="https://github.com/user-attachments/assets/2823087a-e3c3-4a45-bda7-3cf512f9d039" />
+<img width="210" height="228" alt="image" src="https://github.com/user-attachments/assets/2b5bfc15-c324-465a-bf36-a2aad330d1c5" />
