Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -143,10 +143,21 @@
 
 </br>
 
-**1) Fiori Launchpad에서 새로운 Catalog를 생성**
+### 1) Fiori Launchpad에서 새로운 Catalog를 생성
 - 클라이언트 100번인지 확인
   
 <img width="755" height="363" alt="image" src="https://github.com/user-attachments/assets/7de45df5-4bb9-4b74-bb42-87d75d7cb472" />
 </br>
 
 <img width="227" height="247" alt="image" src="https://github.com/user-attachments/assets/2e6425da-e9c5-45c6-b93e-072909361e76" />
+</br>
+</br>
+</br>
+
+### 2) 특정 Catalog(카테고리) 안에서 Static 타일을 생성하고, Semantic Object/Action으로 앱을 연결
+
+<img width="744" height="245" alt="image" src="https://github.com/user-attachments/assets/edb12ca3-05f1-443b-8a2f-565089f56108" />
+
+<img width="631" height="215" alt="image" src="https://github.com/user-attachments/assets/6efe4f70-3f39-4966-98db-b8001380c0dc" />
+
+<img width="621" height="446" alt="image" src="https://github.com/user-attachments/assets/077c07ae-d0d5-4051-a127-e4c18691b1e4" />
