Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -169,3 +169,18 @@
 </br>
 </br>
 
+### 3) Catalog 안에서 Target Mapping을 생성하고, manifest.json의 앱 ID를 연결해 Semantic Object/Action으로 Fiori 앱을 매핑
+
+<img width="729" height="431" alt="image" src="https://github.com/user-attachments/assets/33f9d540-9e9f-4f6e-aeaf-9feb46601287" />
+</br>
+</br>
+
+<img width="479" height="298" alt="image" src="https://github.com/user-attachments/assets/028233be-6cda-45cf-8808-29d4c541fd9e" />
+</br>
+</br>
+
+<img width="677" height="357" alt="image" src="https://github.com/user-attachments/assets/6f74babd-c472-4f63-964c-5a3d43d881aa" />
+</br>
+</br>
+</br>
+
