Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -182,5 +182,19 @@
 <img width="677" height="357" alt="image" src="https://github.com/user-attachments/assets/6f74babd-c472-4f63-964c-5a3d43d881aa" />
 </br>
 </br>
+
+- Catalog 안에서 생성된 Target Mapping을 수정도 가능함
+
+<img width="646" height="486" alt="image" src="https://github.com/user-attachments/assets/1a56df74-a3da-4fde-a51d-2ec44ca13e90" />
+</br>
 </br>
 
+- Catalog 안에 생성된 타일을 복사하거나 삭제도 가능
+
+<img width="551" height="331" alt="image" src="https://github.com/user-attachments/assets/39c7a9a7-4f2e-4ed5-9b1e-68714bbd9ae8" />
+
+</br>
+</br>
+</br>
+
+### 4) Fiori Launchpad에서 새로운 Group을 생성하고, 해당 그룹에 타일을 배치
