Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -169,7 +169,7 @@
 </br>
 </br>
 
-### 3) Catalog 안에서 Target Mapping을 생성하고, manifest.json의 앱 ID를 연결해 Semantic Object/Action으로 Fiori 앱을 매핑
+### 3) Catalog 안에서 Target Mapping을 생성하고, manifest.json의 앱 ID를 연결해 Semantic Object/Action으로 Fiori를 매핑
 
 <img width="729" height="431" alt="image" src="https://github.com/user-attachments/assets/33f9d540-9e9f-4f6e-aeaf-9feb46601287" />
 </br>
