Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -198,3 +198,9 @@
 </br>
 
 ### 4) Fiori Launchpad에서 새로운 Group을 생성하고, 해당 그룹에 타일을 배치
+<img width="639" height="507" alt="image" src="https://github.com/user-attachments/assets/6a8cdfdf-8dd5-42d3-8f1a-ccaaf9b942dd" />
+</br>
+</br>
+
+<img width="292" height="335" alt="image" src="https://github.com/user-attachments/assets/38405cb9-cc6b-44a4-9359-7fa4203d754a" />
+
