Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -203,4 +203,14 @@
 </br>
 
 <img width="292" height="335" alt="image" src="https://github.com/user-attachments/assets/38405cb9-cc6b-44a4-9359-7fa4203d754a" />
+</br>
+</br>
+</br>
 
+### 5) Catalog에 만든 타일을 선택해서 Group에 추가하고, Launchpad 홈 화면에 배치
+
+<img width="375" height="444" alt="image" src="https://github.com/user-attachments/assets/156797b1-518a-4437-a4ce-a343835ecccd" />
+</br>
+</br>
+
+<img width="604" height="535" alt="image" src="https://github.com/user-attachments/assets/29755527-8351-4989-8636-9a3b7895b1b7" />
