Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -214,3 +214,48 @@
 </br>
 
 <img width="604" height="535" alt="image" src="https://github.com/user-attachments/assets/29755527-8351-4989-8636-9a3b7895b1b7" />
+</br>
+</br>
+</br>
+
+### 6) `PFCG` (Role Maintenance)에서 Single Role을 생성해 사용자에게 Fiori Catalog/Group 권한을 부여
+
+<img width="931" height="292" alt="image" src="https://github.com/user-attachments/assets/1d9605af-612d-4528-9aaf-e3deef4d5642" />
+</br>
+</br>
+</br>
+
+### 7) `PFCG` 에서 Fiori Launchpad Catalog를 추가해 해당 Role에 앱 권한을 연결
+<img width="844" height="500" alt="image" src="https://github.com/user-attachments/assets/5703bd7b-ae40-4d9a-87df-0362fc628bff" />
+</br>
+</br>
+
+<img width="828" height="284" alt="image" src="https://github.com/user-attachments/assets/53422c02-dd50-4862-af50-ff2a65df0c68" />
+</br>
+</br>
+</br>
+
+### 8) `PFCG` 에서 Fiori Launchpad Group을 추가해 사용자의 홈 화면에 타일이 보이도록 연결
+
+<img width="779" height="494" alt="image" src="https://github.com/user-attachments/assets/03a83572-4106-44ae-a391-43ddfb8b14d9" />
+</br>
+</br>
+
+<img width="778" height="134" alt="image" src="https://github.com/user-attachments/assets/42a33bed-3819-4cad-a81d-f6929e7fad99" />
+</br>
+</br>
+</br>
+
+### 9) `PFCG` 의 User 탭에서 해당 Role을 사용자에게 할당
+
+<img width="773" height="408" alt="image" src="https://github.com/user-attachments/assets/be3f9af8-8988-4486-aeaf-794c5caf8e78" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
