Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -143,6 +143,25 @@
 
 </br>
 
+## < Fiori Launchpad 타일 생성부터 권한 부여까지 전체 설정 가이드 >
+</br>
+
+**1) 카탈로그 및 그룹 생성 (/n/ui2/flpd_cust)
+- 카탈로그 생성
+
+  - 카탈로그 타이틀: `[B##] My catalog`
+  - 카탈로그 ID: `ZCAID_B##`
+- 타일 생성
+
+  - 시멘틱 오브젝트: `ZSOB##_01`
+  - Action: `display`
+  - Target Mapping 설정 → 연결할 프로그램(앱) 지정
+- 그룹 생성
+
+  - 그룹 ID: `ZGRID_B##`
+  - 생성한 타일을 해당 그룹에 추가
+</br>
+
 ### 1) Fiori Launchpad에서 새로운 Catalog를 생성
 - 클라이언트 100번인지 확인
   
