Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -146,7 +146,7 @@
 ## < Fiori Launchpad 타일 생성부터 권한 부여까지 전체 설정 가이드 >
 </br>
 
-**1) 카탈로그 및 그룹 생성 (/n/ui2/flpd_cust)
+**1) 카탈로그 및 그룹 생성 (/n/ui2/flpd_cust)**
 - 카탈로그 생성
 
   - 카탈로그 타이틀: `[B##] My catalog`
@@ -160,6 +160,10 @@
 
   - 그룹 ID: `ZGRID_B##`
   - 생성한 타일을 해당 그룹에 추가
+ 
+**2) 권한 부여 (`PFCG`)**
+- 생성한 카탈로그와 그룹에 대해 역할(Role)을 생성
+- 해당 역할을 사용자에게 할당하여 실행 권한 부여
 </br>
 
 ### 1) Fiori Launchpad에서 새로운 Catalog를 생성
