Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -71,7 +71,7 @@
 
 </br>
 
-## < SAP UI5 테마 커스터마이징 >
+## < SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`) >
 </br>
 
 ### 1) ABAP 시스템으로 배포하면서 CTS TRANSPORT를 지정
@@ -99,7 +99,7 @@
 </br>
 
 
-### 4) /n/ui5/theme_designer 명령어로 FIORI 테마를 커스터마이징(로고·색상·배경 등 변경) 가능
+### 4) `/n/ui5/theme_designer` 명령어로 FIORI 테마를 커스터마이징(로고·색상·배경 등 변경) 가능
 - 테마 변경 후 ‘저장’은 임시저장, ‘저장 및 작성’은 최종 활성화, ‘닫기’는 편집 종료 후 다음 단계로 이동
 
 <img width="718" height="319" alt="image" src="https://github.com/user-attachments/assets/01d1c3b3-9728-41ce-949a-f54c9803a1d5" />
@@ -146,7 +146,7 @@
 ## < Fiori Launchpad 타일 생성부터 권한 부여까지 전체 설정 가이드 >
 </br>
 
-**1) 카탈로그 및 그룹 생성 (/n/ui2/flpd_cust)**
+**1) 카탈로그 및 그룹 생성 (TCODE - 카탈로그 : `/n/ui2/flpd_cust`)**
 - 카탈로그 생성
 
   - 카탈로그 타이틀: `[B##] My catalog`
@@ -161,7 +161,7 @@
   - 그룹 ID: `ZGRID_B##`
   - 생성한 타일을 해당 그룹에 추가
  
-**2) 권한 부여 (`PFCG`)**
+**2) 권한 부여 (TCODE - Role : `PFCG`)**
 - 생성한 카탈로그와 그룹에 대해 역할(Role)을 생성
 - 해당 역할을 사용자에게 할당하여 실행 권한 부여
 </br>
@@ -282,3 +282,30 @@
 
 </br>
 
+### 실습 1 : 배포한 UI5 앱을 FLP에 타일로 등록하고 권한까지 연결하는 실습
+
+</br>
+
+<img width="351" height="196" alt="image" src="https://github.com/user-attachments/assets/db7d4391-b209-41e5-83e1-c8c17ffb00d6" />
+
+</br>
+</br>
+</br>
+
+- Static 타일에서 제목·아이콘 설정 후 Semantic Object(ZSOB3_02)와 Action(display)으로 앱을 연결
+<img width="607" height="410" alt="image" src="https://github.com/user-attachments/assets/3de3183a-513b-4ccc-b895-357f79e824a5" />
+</br>
+</br>
+
+- Catalog에 Target Mapping을 새로 추가해 Semantic Object/Action으로 앱을 연결
+<img width="958" height="251" alt="image" src="https://github.com/user-attachments/assets/dffce9e7-398f-41cb-896e-168306721f0b" />
+</br>
+</br>
+
+- 카탈로그의 타일을 선택해 특정 Group에 추가
+<img width="406" height="355" alt="image" src="https://github.com/user-attachments/assets/28772165-5fec-413b-8b0b-76c7d88f6699" />
+</br>
+</br>
+
+- Launchpad 홈 화면의 해당 Group에 추가한 타일이 정상적으로 표시\
+<img width="604" height="414" alt="image" src="https://github.com/user-attachments/assets/90280b07-3438-4dc3-962f-2a7e784ce6ab" />
