--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -229,12 +229,31 @@
 ## < DatePicker / DateRangeSelection 정리 >
 </br>
 
-- **CREATE / UPDATE (서버로 전송)** : Date 객체 그대로 사용. 필요 시 `setMinutes(getTimezoneOffset)` 1회
-- **READ / FILTER (조회 조건)** : `DateFormat.getInstance({ UTC:true })` 사용. `parse` / `format` 가능
+**1) `DATS` 일 때**
+- 서버에 "yyyyMMdd" 문자열로 보내기
+- UTC 보정 필요 없음
+- JS에서 그냥 문자열 그대로 전송하면 끝
+```html
+<DatePicker
+  value="{oModel>/Date}"
+  valueFormat="yyyyMMdd"
+/>
+```
+
+**2) Edm.Date**
+
+</br>
+
 ```java
 oData.Assigndate.setMinutes(
     oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
 );
+
+// Edm.DateTime 타입 서버 전송 시 필수
+fixUTC: function(oDate) {
+    if (!oDate) return null;
+    return new Date(oDate.getTime() - (oDate.getTimezoneOffset() * 60000));
+}
 ```
 ```java
 let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
