--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -236,12 +236,34 @@
 ```html
 <DatePicker
   value="{oModel>/Date}"
-  valueFormat="yyyyMMdd"
+  valueFormat="yyyyMMdd"   
 />
 ```
 
 **2) Edm.Date**
+- `type.Date` 사용
+- Date 객체 그대로 사용
+- UTC 보정 필요 없음
+```html
+<DatePicker
+  value="{
+    path: 'oModel>/Date',
+    type: 'sap.ui.model.type.Date'
+  }"
+/>
+```
 
+**3) `Edm.DateTime`**
+- Date 객체 사용
+- 반드시 UTC 보정 필요
+```html
+fixUTC: function(oDate) {
+    if (!oDate) return null;
+    return new Date(oDate.getTime() - (oDate.getTimezoneOffset() * 60000));
+}
+```
+</br>
+</br>
 </br>
 
 ```java
